# serializer version: 1
# name: test_events[aqara_w100][event.climate_sensor_w100_button_bottom_three-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.climate_sensor_w100_button_bottom_three',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Bottom, Three)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000004B-MatterNodeDevice-5-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[aqara_w100][event.climate_sensor_w100_button_bottom_three-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Climate Sensor W100 Button (Bottom, Three)',
    }),
    'context': <ANY>,
    'entity_id': 'event.climate_sensor_w100_button_bottom_three',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[aqara_w100][event.climate_sensor_w100_button_middle_two-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.climate_sensor_w100_button_middle_two',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Middle, Two)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000004B-MatterNodeDevice-4-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[aqara_w100][event.climate_sensor_w100_button_middle_two-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Climate Sensor W100 Button (Middle, Two)',
    }),
    'context': <ANY>,
    'entity_id': 'event.climate_sensor_w100_button_middle_two',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[aqara_w100][event.climate_sensor_w100_button_top_one-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.climate_sensor_w100_button_top_one',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Top, One)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000004B-MatterNodeDevice-3-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[aqara_w100][event.climate_sensor_w100_button_top_one-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Climate Sensor W100 Button (Top, One)',
    }),
    'context': <ANY>,
    'entity_id': 'event.climate_sensor_w100_button_top_one',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[generic_switch][event.mock_generic_switch_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_generic_switch_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[generic_switch][event.mock_generic_switch_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Mock Generic Switch Button',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_generic_switch_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[generic_switch_multi][event.mock_generic_switch_button_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_generic_switch_button_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (1)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[generic_switch_multi][event.mock_generic_switch_button_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Mock Generic Switch Button (1)',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_generic_switch_button_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[generic_switch_multi][event.mock_generic_switch_button_fancy_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_generic_switch_button_fancy_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Fancy Button)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-2-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[generic_switch_multi][event.mock_generic_switch_button_fancy_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Mock Generic Switch Button (Fancy Button)',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_generic_switch_button_fancy_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_enter_ok_select-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.white_series_onoff_switch_button_enter_ok_select',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Enter/OK/Select)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000100-MatterNodeDevice-5-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_enter_ok_select-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'White Series OnOff Switch Button (Enter/OK/Select)',
    }),
    'context': <ANY>,
    'entity_id': 'event.white_series_onoff_switch_button_enter_ok_select',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_off_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.white_series_onoff_switch_button_off_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Off, Down)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000100-MatterNodeDevice-4-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_off_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'White Series OnOff Switch Button (Off, Down)',
    }),
    'context': <ANY>,
    'entity_id': 'event.white_series_onoff_switch_button_off_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_on_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.white_series_onoff_switch_button_on_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (On, Up)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000100-MatterNodeDevice-3-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_on_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'White Series OnOff Switch Button (On, Up)',
    }),
    'context': <ANY>,
    'entity_id': 'event.white_series_onoff_switch_button_on_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[multi_endpoint_light][event.inovelli_button_config-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.inovelli_button_config',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Config)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-5-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[multi_endpoint_light][event.inovelli_button_config-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Inovelli Button (Config)',
    }),
    'context': <ANY>,
    'entity_id': 'event.inovelli_button_config',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[multi_endpoint_light][event.inovelli_button_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.inovelli_button_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Down)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-4-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[multi_endpoint_light][event.inovelli_button_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Inovelli Button (Down)',
    }),
    'context': <ANY>,
    'entity_id': 'event.inovelli_button_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[multi_endpoint_light][event.inovelli_button_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.inovelli_button_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Up)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-3-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[multi_endpoint_light][event.inovelli_button_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Inovelli Button (Up)',
    }),
    'context': <ANY>,
    'entity_id': 'event.inovelli_button_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
